# DEALR

./: .gitignore  README.md  dispenser.py  dynamixel_controller.py  errors.py  pylock.toml  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
ARCHIVE/: dispenser.py
HARDWARE/: control_table.py  dispenser.py  dispenser_core.py  dispenser_gui.py
src/blackjack/: cards.py  dealer.py  player.py
src/card_detector/: main.py  video_stream.py
src/dealr/: main.py  ports.toml
src/dealr/blackjack/: cards.py  client.py  dealer.py  game.py  main.py  player.py  server.py
src/dealr/card_detector/: apriltag_stream.py  main.py  server.py  test.py  video_stream.py
src/dealr/dispenser/: control_table.py  dispenser.py  dispenser_core.py  dispenser_gui.py  server.py
src/dealr/manipulator_arm/: RUN.py  RUN_autonomous.py  RUN_teleop.py  control_table.py  dynamixel_driver.py  joystick_mapping.txt  kinematics.py
src/dealr/motor/: dynamixel_controller.py
src/dispenser/: control_table.py  dispenser.py  dispenser_core.py  dispenser_gui.py  dynamixel_controller.py
src/manipulator_arm/: RUN.py  RUN_autonomous.py  RUN_teleop.py  control_table.py  dynamixel_driver.py  joystick_debug.py  joystick_driver.py  kinematics.py
src/manipulator_arm/utils/: joystick_debug.py
