[project]
name = "dealr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "dynamixel-controller>=0.9.2",
    "dynamixel-sdk>=3.7.31",
    "types-colorama>=0.4.15.20240311",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]

[tool.uv]
package = true
